# sky-craft

./: .gitignore  Cargo.toml  server.toml
.claude/skills/release-sky-craft/: SKILL.md
.github/workflows/: build-client.yml
auth/: .env.example  Dockerfile  README.md  api.py  bot.py  db.py  main.py  requirements.txt
client/: Cargo.toml
client/TODO/: audio_system.md  entity_rendering.md  input_camera.md  network_sync.md  settings_persistence.md  sky_environment.md  skycraft_visuals.md  ui_hud.md  voxel_rendering.md
client/assets/sounds/: SOUND_CATALOG.md
client/src/: asset_downloader.rs  atlas.rs  audio.rs  auth_client.rs  camera.rs  cow.rs  hand.rs  input.rs  main.rs  mesh.rs  net_bridge.rs  network.rs  pipeline.rs  renderer.rs  session.rs  shader.wgsl  state.rs  ui.rs  world.rs
client/src/renderer/: camera.rs  mesh.rs  mod.rs  shader.wgsl  vertex.rs
common/data/: block_textures.json
common/protocol/: Cargo.toml
common/protocol/src/: codec.rs  lib.rs  packets.rs  types.rs
mechanics/: block_breaking.md  blocks.md  chat_commands.md  combat.md  crafting.md  day_night_weather.md  explosions.md  farming.md  gravity_physics.md  hunger_health.md  inventory.md  lighting.md  liquids.md  mob_spawning.md  mobs_hostile.md  mobs_neutral.md  mobs_passive.md  networking.md  player_movement.md  potions.md  rendering.md  sounds.md  villages.md  world_generation.md  xp_enchanting.md
scripts/: download_assets.sh  gen_block_textures.py
server/: Cargo.toml  Dockerfile
server/TODO/: block_logic.md  chunk_streaming.md  combat.md  commands.md  enchanting_brewing.md  inventory_crafting.md  item_use.md  lighting.md  loot_tables.md  mob_ai.md  mob_spawning.md  respawn_system.md  skycraft_unique.md  villages.md  world_save_load.md  world_structures.md
server/src/: auth.rs  config.rs  entity.rs  game.rs  main.rs  physics.rs  player.rs
server/src/network/: connection.rs  mod.rs
server/src/world/: chunk.rs  generator.rs  island.rs  mod.rs
unique_logic/: bridges_traversal.md  custom_crafting.md  hazards.md  hud.md  island_generation.md  mob_buffs.md  mob_spawning_rules.md  multiplayer.md  progression_guide.md  resource_economy.md  rings_progression.md  spawn_respawn.md  unique_features.md  void_mechanics.md
