[package]
name = "skycraft-client"
version = "0.0.1"
edition = "2024"
description = "Sky Craft game client - voxel renderer with wgpu"

[dependencies]
skycraft-protocol = { path = "../common/protocol" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Graphics
wgpu = "24"
winit = "0.30"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Math
glam = { version = "0.29", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image loading (textures)
image = { version = "0.25", default-features = false, features = ["png"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Audio
rodio = "0.20"

# Random
rand = "0.9"

# Bytemuck for GPU buffer data
bytemuck = { version = "1", features = ["derive"] }

# Block on async (for renderer init)
pollster = "0.4"

# UI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# HTTP client for auth API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Directories
dirs = "6"

# ZIP extraction for asset downloading
zip = { version = "2", default-features = false, features = ["deflate"] }
